--- a/ClipInputCLI/Config.yml
+++ b/ClipInputCLI/Config.yml
@@ -10,6 +10,7 @@ PadBackgroundColor: [0.3, 0.3, 0.3, 0.3]
 PadStartPosition: [0.16, -0.45, 0]
 PadEndPosition: [0.6, 0, 0]
 Theme: Black
+StartOffset: 0
 
 Keys:
 - EntryName: Accelerate
