--- a/ClipInput/ClipInput.csproj
+++ b/ClipInput/ClipInput.csproj
@@ -5,7 +5,7 @@
 		<AssemblyTitle>Clip Input</AssemblyTitle>
 		<Authors>Petr 'BigBang1112' Pivoňka</Authors>
 		<Copyright>Copyright © Petr 'BigBang1112' Pivoňka</Copyright>
-		<Version>1.2.0</Version>
+		<Version>1.2.0-rc</Version>
 
 		<TargetFramework>net5.0</TargetFramework>
 	</PropertyGroup>
