--- a/ClipInputCLI/ClipInputCLI.csproj
+++ b/ClipInputCLI/ClipInputCLI.csproj
@@ -5,7 +5,7 @@
 		<AssemblyTitle>Clip Input CLI</AssemblyTitle>
 		<Authors>Petr 'BigBang1112' Pivoňka</Authors>
 		<Copyright>Copyright © Petr 'BigBang1112' Pivoňka</Copyright>
-		<Version>1.2.0</Version>
+		<Version>1.2.0-rc</Version>
 
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net5.0</TargetFramework>
