--- a/ClipInput.Client/ClipInput.Client.csproj
+++ b/ClipInput.Client/ClipInput.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<Version>2.0.2</Version>
@@ -18,7 +18,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\ClipInput\ClipInput.csproj" />
-		<ProjectReference Include="..\GbxToolAPI\Src\GbxToolAPI.Client\GbxToolAPI.Client.csproj" />
 	</ItemGroup>
 
 </Project>
