--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -25,6 +25,9 @@ jobs:
       with:
         dotnet-version: 7.0.x
         
+    - name: Add GitHub NuGet source
+      run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/bigbang1112-cz/index.json"
+    
     - name: Restore dependencies
       run: dotnet restore
       
