--- a/ClipInput.Client/ClipInput.Client.csproj
+++ b/ClipInput.Client/ClipInput.Client.csproj
@@ -15,6 +15,10 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.5" />
 	</ItemGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="GbxToolAPI.Client" Version="1.0.0" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\ClipInput\ClipInput.csproj" />
