--- a/ClipInputCLI/ClipInputCLI.csproj
+++ b/ClipInputCLI/ClipInputCLI.csproj
@@ -5,7 +5,7 @@
 		<AssemblyTitle>Clip Input 2 CLI</AssemblyTitle>
 		<Authors>Petr 'BigBang1112' Pivoňka</Authors>
 		<Copyright>Copyright © Petr 'BigBang1112' Pivoňka</Copyright>
-		<Version>2.0.4</Version>
+		<Version>2.0.5</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -19,23 +19,25 @@
 		<PublishSingleFile>true</PublishSingleFile>
 		<EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
 		<SelfContained>true</SelfContained>
-		
+
 		<!-- full will come with code generation -->
 		<TrimMode>partial</TrimMode>
 		<PublishTrimmed>true</PublishTrimmed>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="GbxToolAPI.CLI" Version="1.0.3" />
+		<PackageReference Include="GbxToolAPI.CLI" Version="1.0.6" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ClipInput\ClipInput.csproj" />
+		<ProjectReference Include="..\ClipInput\ClipInput.csproj">
+			<IsTrimmable>false</IsTrimmable>
+		</ProjectReference>
 	</ItemGroup>
 
 	<ItemGroup>
 		<None Update="LICENSE">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="UpdateAssets.bat">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
