--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.ARTIFACT_NAME }}
+          name: ${{ env.ARTIFACT_NAME }}-${{ matrix.os.runtime }}
           path: ${{ env.PROJECT_NAME }}${{ env.ZIP_SUFFIX }}.hash.txt
           if-no-files-found: error
   
@@ -114,7 +114,8 @@ jobs:
       - name: Download a Build Artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.ARTIFACT_NAME }}
+          pattern: ${{ env.PROJECT_NAME }}-*
+          merge-multiple: true
       
       - name: Read hash files
         run: |
